federation-2/router-bridge/src/snapshots/router_bridge__planner__tests__anonymous_query_works-2.snap
---
source: router-bridge/src/planner.rs
expression: "serde_json::to_string_pretty(&payload.usage_reporting).unwrap()"
---
{
  "statsReportKey": "# -\n{me{name{first last}}}",
  "referencedFieldsByType": {
    "Query": {
      "fieldNames": [
        "me"
      ],
      "isInterface": false
    },
    "User": {
      "fieldNames": [
        "name"
      ],
      "isInterface": false
    },
    "Name": {
      "fieldNames": [
        "first",
        "last"
      ],
      "isInterface": false
    }
  }
}
