federation-2/router-bridge/src/snapshots/router_bridge__planner__tests__generate_query_fragments_true.snap
---
source: router-bridge/src/planner.rs
assertion_line: 1054
expression: "serde_json::to_string_pretty(&payload.data).unwrap()"
---
{
  "queryPlan": {
    "kind": "QueryPlan",
    "node": {
      "kind": "Fetch",
      "serviceName": "Subgraph1",
      "variableUsages": [],
      "operation": "{t{__typename ..._generated_onA3_0}}fragment _generated_onA2_0 on A{x y}fragment _generated_onA3_0 on A{x y t{__typename ..._generated_onA2_0 ...on B{z}}}",
      "operationKind": "query"
    }
  },
  "formattedQueryPlan": "QueryPlan {\n  Fetch(service: \"Subgraph1\") {\n    {\n      t {\n        __typename\n        ..._generated_onA3_0\n      }\n    }\n    \n    fragment _generated_onA2_0 on A {\n      x\n      y\n    }\n    \n    fragment _generated_onA3_0 on A {\n      x\n      y\n      t {\n        __typename\n        ..._generated_onA2_0\n        ... on B {\n          z\n        }\n      }\n    }\n  },\n}"
}
