federation-2/router-bridge/src/snapshots/router_bridge__planner__tests__get_operation_signature.snap
---
source: router-bridge/src/planner.rs
expression: signature
---
# MyFirstAndLastName
query MyFirstAndLastName{me{name{first last}}}
