federation-2/router-bridge/src/snapshots/router_bridge__planner__tests__it_works.snap
---
source: router-bridge/src/planner.rs
assertion_line: 323
expression: "serde_json::to_string_pretty(&result.data).unwrap()"
---
{
  "kind": "QueryPlan",
  "node": {
    "kind": "Fetch",
    "serviceName": "accounts",
    "variableUsages": [],
    "operation": "{me{name{first last}}}",
    "operationKind": "query"
  }
}
