federation-2/router-bridge/src/snapshots/router_bridge__planner__tests__named_query_with_several_choices_works.snap
---
source: router-bridge/src/planner.rs
assertion_line: 589
expression: "serde_json::to_string_pretty(&payload.data).unwrap()"
---
{
  "kind": "QueryPlan",
  "node": {
    "kind": "Fetch",
    "serviceName": "accounts",
    "variableUsages": [],
    "operation": "query MyFirstName__accounts__0{me{name{first}}}",
    "operationKind": "query",
    "operationName": "MyFirstName__accounts__0",
    "operationDocumentNode": {
      "kind": "Document",
      "definitions": [
        {
          "kind": "OperationDefinition",
          "operation": "query",
          "name": {
            "kind": "Name",
            "value": "MyFirstName__accounts__0"
          },
          "selectionSet": {
            "kind": "SelectionSet",
            "selections": [
              {
                "kind": "Field",
                "name": {
                  "kind": "Name",
                  "value": "me"
                },
                "selectionSet": {
                  "kind": "SelectionSet",
                  "selections": [
                    {
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "name"
                      },
                      "selectionSet": {
                        "kind": "SelectionSet",
                        "selections": [
                          {
                            "kind": "Field",
                            "name": {
                              "kind": "Name",
                              "value": "first"
                            }
                          }
                        ]
                      }
                    }
                  ]
                }
              }
            ]
          }
        }
      ]
    }
  }
}
